# osrs-fragment-calc

./: Cargo.toml  gen_page.py  index_template.html  readme.md  style.css
docs/: index.html  style.css
docs/pkg/: fragments.d.ts  fragments.js  fragments_bg.wasm  fragments_bg.wasm.d.ts  package.json
src/: fragment.rs  fragments.json  lib.rs  set_effects.json
