[package]
name = "fragments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
string-interner = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.53"
serde_json = "1.0.78"
itertools = "0.10.3"
wasm-bindgen = "0.2.79"
console_error_panic_hook = "0.1.7"

[lib]
crate-type = ["cdylib"]
